# FabManager-Data-Analyzer

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  citation.cff  pyproject.toml  requirements-dev.txt  requirements.txt
content/: dataScraper_FabManager.ipynb
examples/: clean_machines_example.py  clean_reservations_machine_example.py  clean_reservations_training_example.py  clean_trainings_example.py  extract_machines_example.py  extract_reservations_example.py  extract_trainings_example.py  extract_users_example.py  merge_cleaned_data_example.py
src/fabmanager_data_analyzer_zumat/: __init__.py  api_client.py  clean_machines_data.py  clean_reservations_machine.py  clean_reservations_training.py  clean_trainings_data.py  extract_machines.py  extract_reservation.py  extract_trainings.py  extract_users.py  merge_cleaned_data.py  utils.py
